unicorecmsgem/static/css/style.css
/* ... */
		/* Frequently Used */
		.h1 { margin: 3px 0 0 0; padding: 8px 10px; font-size: 14px; font-weight: bold; text-transform: uppercase; line-height: 22px; color: #fff; }
		.h1 a { color: #fff; font-weight: bold; }
		.comment,
		.listing { min-height: 45px; border-bottom: 1px solid #d4d4d4; }
		.listing:last-of-type { border: 0!important; }
		.listing .h2,
		.poll .fields .h2,
		.detail .h2,
		.flat .h2,
		.comment .h3 { font-size: 14px; line-height: 16px; }
		.pagination { background: #eeeeee; padding: 10px; }
		.auth form .btns input,
		.auth form .btns a,
		.poll .btns input,
		.listing .more a,
		.pagination a,
		.addcomment form .btns input,
		.challenge .btns input,
		.challenge .btns a { border: 0; }
		.pagination a.right { display: none; }

		/* Articles */
		.articles { padding: 0; margin: 0 0 3px 0; }
		.articles .h1 { background: #ea178b; }
			.articles .listing { padding: 10px 44px 10px 10px; }
				.articles .listing img { width: 45px; float: left; display: block; }
				.articles .listing .h2 { margin: 0 0 0 57px; padding: 0; color: #eb178e;  }
				.articles .listing .h2 a { color: #eb178e; }
				.articles .listing p { margin: 0 0 0 57px; padding: 2px 0 0 0; color: #888888; }
				.articles .pagination a { font-weight: bold; color: #c71663; }
				.articles .no-pic .h2, .articles .no-pic p { margin-left: 0; }
			.articles .detail { padding: 10px; }

		/* Latest */
		.latest{}
			.latest .h1{ background: #ff9933; }
			.latest .listing .h2 a { color: #ff9933; }

		/* Head (used on Articles, Hope City, Stories, etc) */

		.head {}
			.head .h2 { margin: 0 0 0 65px; font-size: 20px; line-height: 22px; }
			.head .img img { width: 45px; float: left; margin: 0 17px 0 0; display: block; }
			.head .meta { margin: 3px 0 0 65px; }
			.head .no-pic {margin-left: 0}

		/* Challenge */
		.challenge { margin: 0 0 3px 0; }
		.challenge .h1 { background: #e31f26; }
			.challenge .listing { padding: 25px; background: #ea178b; border: 0; }
				.challenge .listing img { width: 50px; float: left; display: block; }
				.challenge .listing .h2 { margin: 0 0 0 75px; padding: 0; color: #fff;  }
				.challenge .listing .h2 a { color: #fff; }
				.challenge .listing .h2 a span { color: #000; }
				.challenge .btns { padding: 7px 12px 12px 20px; }
				.challenge .btns input { color: #b00e6f; }
				.challenge .btns a { float: right; color: #b00e6f; }

		/* Hope City */
		.hope-city { margin: 0 0 3px 0; }
		.hope-city .h1 { background: #fad527; }
		.hope-city .h1 span { padding: 7px 20px; float: right; color: #000; }
			.hope-city .listing { background: #fdf2be; padding: 12px 12px 0 20px; border-bottom: 1px solid #d4d4d4; }
				.hope-city .listing img { width: 70px; float: right; display: block; }
				.hope-city .listing .h2 { margin: 0; padding: 0; color: #000;  }
				.hope-city .listing .h2 a { color: #000; }
				.hope-city .listing .h2 span { color: #fa9e1d; }
				.hope-city .pagination { background: #fdf2be; }
				.hope-city .pagination a { color: #dc850c; }
			.hope-city .detail { padding: 20px 20px 10px 20px; }

		/* Stories */
		.stories { background: #fff; margin: 0 0 3px 0; }
		.stories .h1 { background: #c4d131; }
		.stories .h1 a i { display: none; }
			.stories .listing { padding: 12px 12px 12px 20px; }
				.stories .listing img { width: 70px; float: right; display: block; }
				.stories .listing .h2 { margin: 3px 0 0 0; padding: 0; color: #34b2b2;  }
				.stories .listing .h2 a { color: #34b2b2; }
				.stories .listing .h2 a:before { padding: 5px 1px 0 0; content: "\201C"; font-size: 24px; color: #c4d131; }
				.stories .listing .h2 a:after { padding: 5px 0 0 1px; content: "\201D"; font-size: 24px; color: #c4d131; }
				.stories .listing p { margin: 3px 0 0 0; font-size: 12px; text-transform: uppercase; line-height: 20px; color: #363636;  }
				.stories .pagination a {  color: #34b2b2; }
				.stories .pagination a.own { color: #c4d131; }
			.stories .detail { padding: 20px 20px 10px 20px; }

		/* Declaration */
		.declaration { margin: 0 0 3px 0; }
		.declaration .h1 { background: #39c0c0; }
			.declaration .listing { padding: 10px 44px 10px 10px; }
				.declaration .listing img { width: 45px; float: left; display: block; }
				.declaration .listing .h2 { margin: 0 0 0 57px; padding: 0; color: #39c0c0;  }
				.declaration .listing .h2 a { color: #39c0c0; }
				.declaration .listing p { margin: 0 0 0 57px; padding: 2px 0 0 0; color: #888888; }
				.declaration .pagination a { font-weight: bold; color: #39c0c0; }
			.declaration .detail { padding: 10px; }

		/* What */
		.what { margin: 0 0 3px 0; }
		.what .h1 { background: #c4d131; }
		.what .h1 a { color: #000; }
			.what .listing { padding: 10px 44px 10px 10px; }
				.what .listing img { width: 45px; float: left; display: block; }
				.what .listing .h2 { margin: 0 0 0 57px; padding: 0; color: #c4d131;  }
				.what .listing .h2 a { color: #c4d131; }
				.what .listing p { margin: 0 0 0 57px; padding: 2px 0 0 0; color: #888888; }
				.what .pagination { color: #888888; }
				.what .pagination a { font-weight: bold; color: #20b7ac; }
			.what .detail { padding: 10px; }

		/* Poll */
		.poll { margin: 0 0 3px 0; }
		.poll form { background: #fcdcee; }
		.poll .h1 { background: #b00e6f; }
			.fields { padding: 20px 20px 15px 20px; border-bottom: 1px solid #edb3d5; }
				.fields .h2 { margin: 0; padding: 0 0 10px 0; color: #000;  }
				.fields .h2 span { display: block; color: #c71663; }
				.fields .field label { padding: 5px 0; display: block; font-family: 'Tw Cen W01 Medium', Arial, Helvetica, sans-serif; font-size: 12px; text-transform: uppercase; line-height: 18px; color: #000; }
			.results { margin: 5px 0 0 0; }
				.results .h3 { font-size: 13px; text-transform: uppercase; }
				.results .answer { margin: 5px 0 15px 0; padding: 4px 8px 2px 8px; background: #b00e6f; display: inline-block; font-size: 12px; color: #fff; }
			.poll .listing { padding: 12px; }
				.poll .listing img { width: 45px; float: left; display: block; }
/* ... */

